# cgitest

./: CMakeLists.txt  README.md  cgitest.cpp  gat0.sav  gat10.sav  gat2.sav  gat5.sav
SIM/: aerodefn.h  engdefn.h  iodefn.h  iosdefn.h  navdefn.h
models/: skyb.ac
texture/: horizon.rgb
